Mobile fix for overlay instance panel always visible

--- a/assets/webconfig/css/darkMode.css
+++ b/assets/webconfig/css/darkMode.css
@@ -226,7 +226,7 @@ tr:hover td {
 
 .panel-default>.panel-system{
     background-color: #0E83E7 !important;
-    border-color: #ddd !important;
+    border-color: #212121 !important;
     color: #fff ;
 }
 
